# pyroparse

./: .dockerignore  .gitignore  BENCHMARK.md  BENCHMARK_HTTP.md  CHANGELOG.md  Cargo.toml  DEVELOPING.md  Dockerfile  Makefile  README.md  pyproject.toml
.agents/skills/pyroparse/: SKILL.md  batch-and-convert.md  integrations.md  metadata.md  raw-messages.md  schema.md
.github/workflows/: ci.yml
docs/: FIT-FORMAT.md
scripts/: benchmark.py  benchmark_http.py  convert_to_parquet.py  demo_duckdb.py  demo_polars.py  download_fit_files.py  generate_profile.py  generate_sport.py  profile.toml
server/: app.py  index.html
src/: fields.rs  lib.rs  reference.rs  types.rs  values.rs
src/fit/: binary.rs  decode.rs  mod.rs  profile.rs
src/pyroparse/: __init__.py  __main__.py  _activity.py  _batch.py  _convert.py  _core.pyi  _course.py  _csv.py  _errors.py  _fit.py  _messages.py  _metadata.py  _parquet.py  _schema.py  _session.py  _sport.py  _sport_categories.py  _types.py  duckdb.py  polars.py
tests/: conftest.py  test_activity.py  test_batch.py  test_column_selection.py  test_convenience.py  test_convert.py  test_course.py  test_csv.py  test_developer_fields.py  test_devices.py  test_duckdb.py  test_extra_columns.py  test_input.py  test_laps.py  test_lazy.py  test_messages.py  test_parquet.py  test_parser_parity.py  test_polars.py  test_read_fit.py  test_schema.py  test_sensor_detection.py  test_sport.py
tests/fixtures/: course.fit  cycling-rowing-cycling-rowing.fit  test.fit  with-developer-fields.fit
