[package]
name = "pyroparse"
version = "0.1.0"
edition = "2021"

[lib]
name = "_core"
crate-type = ["cdylib"]

[dependencies]
fitparser = "0.10"
pyo3 = { version = "0.22", features = ["extension-module"] }
arrow = { version = "53", default-features = false }
pyo3-arrow = "0.5"
pythonize = "0.22"

# Keep dev builds fast enough for interactive use — the fitparser crate
# is extremely slow at opt-level 0.
[profile.dev]
opt-level = 1

[profile.dev.package.fitparser]
opt-level = 2
