[project]
name = "pyroparse"
version = "0.1.0"
description = "Fast and opinionated activity data parsing. Forged in Rust. Fired up in Python."
readme = "README.md"
authors = [{ name = "Aart Goossens", email = "aart@sweatstack.no" }]
requires-python = ">=3.10"
dependencies = ["pyarrow>=14.0"]

[project.optional-dependencies]
server = ["starlette", "uvicorn[standard]", "python-multipart"]
dev = ["pytest>=7.0", "maturin>=1.5"]
scripts = ["polars", "duckdb", "sweatstack", "httpx", "matplotlib"]

[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "pyroparse._core"
python-source = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "matplotlib>=3.10.8",
    "maturin>=1.12.6",
    "pytest>=9.0.2",
]
