[project]
name = "pyroparse"
version = "0.3.2"
description = "Fast and opinionated activity data parsing. Forged in Rust. Fired up in Python."
readme = "README.md"
authors = [{ name = "Aart Goossens", email = "aart@sweatstack.no" }]
requires-python = ">=3.10"
dependencies = ["pyarrow>=14.0", "tqdm>=4.60"]

[project.optional-dependencies]
server = ["starlette", "uvicorn[standard]", "python-multipart"]
dev = ["pytest>=7.0", "maturin>=1.5"]
scripts = ["polars", "duckdb", "sweatstack", "httpx", "matplotlib"]

[project.scripts]
pyroparse = "pyroparse.__main__:main"

[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "pyroparse._core"
python-source = "src"

[tool.cibuildwheel]
build = "cp310-* cp311-* cp312-* cp313-*"
skip = "*-win32 *-manylinux_i686 *-musllinux*_aarch64"
test-requires = ["pytest", "tzdata"]
test-command = "pytest {project}/tests -x --no-header -q"

[tool.cibuildwheel.linux]
before-all = "curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y"
environment = { PATH = "$HOME/.cargo/bin:$PATH" }
archs = "x86_64 aarch64"

[tool.cibuildwheel.macos]
archs = "x86_64 arm64"
environment = { MACOSX_DEPLOYMENT_TARGET = "11.0" }

[tool.cibuildwheel.windows]
archs = "AMD64"

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "matplotlib>=3.10.8",
    "maturin>=1.12.6",
    "pytest>=9.0.2",
]
